26/2605/cipher_contest/1/src/cipher/error.log
brute_force.cpp: In function ‘int main(int, char**)’:
brute_force.cpp:166:50: error: conversion from ‘double’ to non-scalar type ‘std::vector<double>’ requested
  166 |                         vector<double> r = it.get(), vecmax;
      |                                            ~~~~~~^~
In file included from /usr/include/x86_64-linux-gnu/c++/13/bits/c++allocator.h:33,
                 from /usr/include/c++/13/bits/allocator.h:46,
                 from /usr/include/c++/13/string:43,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from brute_force.cpp:1:
/usr/include/c++/13/bits/new_allocator.h: In instantiation of ‘void std::__new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = std::future<double>; _Args = {std::launch, main(int, char**)::<lambda()>}; _Tp = std::future<double>]’:
/usr/include/c++/13/bits/alloc_traits.h:538:17:   required from ‘static void std::allocator_traits<std::allocator<_CharT> >::construct(allocator_type&, _Up*, _Args&& ...) [with _Up = std::future<double>; _Args = {std::launch, main(int, char**)::<lambda()>}; _Tp = std::future<double>; allocator_type = std::allocator<std::future<double> >]’
/usr/include/c++/13/bits/vector.tcc:117:30:   required from ‘std::vector<_Tp, _Alloc>::reference std::vector<_Tp, _Alloc>::emplace_back(_Args&& ...) [with _Args = {std::launch, main(int, char**)::<lambda()>}; _Tp = std::future<double>; _Alloc = std::allocator<std::future<double> >; reference = std::future<double>&]’
brute_force.cpp:56:24:   required from here
/usr/include/c++/13/bits/new_allocator.h:191:11: error: no matching function for call to ‘std::future<double>::future(std::launch, main(int, char**)::<lambda()>)’
  191 |         { ::new((void *)__p) _Up(std::forward<_Args>(__args)...); }
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from brute_force.cpp:8:
/usr/include/c++/13/future:810:7: note: candidate: ‘std::future<_Res>::future(std::future<_Res>&&) [with _Res = double]’
  810 |       future(future&& __uf) noexcept : _Base_type(std::move(__uf)) { }
      |       ^~~~~~
/usr/include/c++/13/future:810:7: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/13/future:807:17: note: candidate: ‘constexpr std::future<_Res>::future() [with _Res = double]’
  807 |       constexpr future() noexcept : _Base_type() { }
      |                 ^~~~~~
/usr/include/c++/13/future:807:17: note:   candidate expects 0 arguments, 2 provided
/usr/include/c++/13/future:804:7: note: candidate: ‘std::future<_Res>::future(const __state_type&) [with _Res = double; __state_type = std::future<double>::__state_type]’
  804 |       future(const __state_type& __state) : _Base_type(__state) { }
      |       ^~~~~~
/usr/include/c++/13/future:804:7: note:   candidate expects 1 argument, 2 provided
